<resources>
    <string name="app_name">Latest In Tech News</string>
    <string name="no_results">No articles found at the moment. Please try again later.</string>
    <string name="no_internet">No Internet connection detected. Please check your connection and
        try again.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Search Settings</string>

    <!-- Strings For Order-By Preference (From Lesson 7, Part 9) [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <string name="settings_order_by_newest_label">Newest First</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <string name="settings_order_by_oldest_label">Oldest First</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Strings For Company Preference -->
    <string name="settings_filter_by_company_label">Filter By Company</string>
    <string name="settings_filter_by_company_key" translatable="false">filter_by_company</string>
    <string name="settings_filter_by_company_default" translatable="false">@string/settings_filter_by_all_value</string>

    <string name="settings_filter_by_all_label">All</string>
    <string name="settings_filter_by_all_value" translatable="false">technology/technology</string>

    <string name="settings_filter_by_apple_label">Apple</string>
    <string name="settings_filter_by_apple_value" translatable="false">technology/apple</string>

    <string name="settings_filter_by_facebook_label">Facebook</string>
    <string name="settings_filter_by_facebook_value" translatable="false">technology/facebook</string>

    <string name="settings_filter_by_ibm_label">IBM</string>
    <string name="settings_filter_by_ibm_value" translatable="false">technology/ibm</string>

    <string name="settings_filter_by_intel_label">Intel</string>
    <string name="settings_filter_by_intel_value" translatable="false">technology/intel</string>

    <string name="settings_filter_by_microsoft_label">Microsoft</string>
    <string name="settings_filter_by_microsoft_value" translatable="false">technology/microsoft</string>

    <string name="settings_filter_by_oracle_label">Oracle</string>
    <string name="settings_filter_by_oracle_value" translatable="false">technology/oracle</string>

    <string name="settings_filter_by_samsung_label">Samsung</string>
    <string name="settings_filter_by_samsung_value" translatable="false">technology/samsung</string>

    <!-- Strings For Section Preference -->
    <string name="settings_filter_by_section_label">Filter By Section</string>
    <string name="settings_filter_by_section_key" translatable="false">filter_by_section</string>
    <string name="settings_filter_by_section_default" translatable="false">@string/settings_filter_by_all_label</string>
    
    <string name="settings_filter_by_art_label">Art and Design</string>
    <string name="settings_filter_by_art_value" translatable="false">artanddesign</string>

    <string name="settings_filter_by_books_label">Books</string>
    <string name="settings_filter_by_books_value" translatable="false">books</string>

    <string name="settings_filter_by_education_label">Education</string>
    <string name="settings_filter_by_education_value" translatable="false">education</string>

    <string name="settings_filter_by_environment_label">Environment</string>
    <string name="settings_filter_by_environment_value" translatable="false">environment</string>

    <string name="settings_filter_by_food_label">Food</string>
    <string name="settings_filter_by_food_value" translatable="false">food</string>

    <string name="settings_filter_by_games_label">Games</string>
    <string name="settings_filter_by_games_value" translatable="false">games</string>

    <string name="settings_filter_by_technology_label">Technology</string>
    <string name="settings_filter_by_technology_value" translatable="false">technology</string>
</resources>
